package fabman.messages;

///
/// The coordinator manages running fabricator queues.
/// It handles the following requests:
/// * List running fab queue backends.
/// * Retrieve a socket to a given fab backend, or a code
///   and message representing why the backend could not
///   be retrieved (ordinarily a failure to start a process
///   for the fab).
///

message Socket {
  optional uint32 port = 1;
  optional string hostName = 2;
  optional bytes ipv4 = 3;
}

message VersionRequest {
}

message VersionResponse {
  optional uint32 major = 1;
  optional uint32 minor = 2;
  optional uint32 build = 3;
  optional string name = 4;
  optional string buildDate = 5;
  
}

message ListFabsRequest {
}

message ListFabsResponse {
  message FabDescription {
    required string name = 1;
    required string fabDescriptor = 2;
    optional Socket socket = 4;
  }
  repeated FabDescription fabs = 1;
}

message GetFabRequest {
  required string name = 1;
  optional string fabDescriptor = 2;
  optional bool openIfNeeded = 5 [default=true];
}

message GetFabResponse {
  enum RspCode {
    OK = 0;
    ERROR = 1;
    BAD_DESCRIPTOR = 2;
    NO_OPEN_FAB = 3;
  }
  required RspCode code = 1;
  optional Socket socket = 4;
  optional string errorMessage = 5;
}

enum Type {
  VERSION = 1;
  LIST_FABS = 2;
  GET_FAB = 3;
}

message Request {
  required Type type = 1;

  optional VersionRequest versionReq = 2;
  optional ListFabsRequest listFabsReq = 3;
  optional GetFabRequest getFabReq = 4;
}

message Response {
  required Type type = 1;

  optional VersionResponse versionRsp = 2;
  optional ListFabsResponse listFabsRsp = 3;
  optional GetFabResponse getFabRsp = 4;
}